--- a/app.json
+++ b/app.json
@@ -23,10 +23,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.feryfadulrahman.SintikApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "59204e0c-ee62-4251-ba21-062743aa675e"
+      }
     }
   }
 }
