--- a/app.json
+++ b/app.json
@@ -33,6 +33,7 @@
       "eas": {
         "projectId": "59204e0c-ee62-4251-ba21-062743aa675e"
       }
-    }
+    },
+    "owner": "feryfadulrahman"
   }
 }
