--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-webview": "13.8.6"
   },
   "devDependencies": {
