[INTRO] splash & icon file

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "SiantikApp",
-    "slug": "SiantikApp",
+    "name": "SIPTIK",
+    "slug": "SIPTIK",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
